# cuda_scalar_result

./: .gitmodules  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt
benchmarks/scalar/: atomic_pinned.cu  atomics.cu  clever_pinned.cu  device_memory.cu  kernels.cuh  managed_memory.cu  managed_memory_prefetch.cu  pinned_memory.cu  scalar_benchmark.cu
